packaged/objects/Sponsorship_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Received_RCAV__c</fullName>
        <label>Date of Receipt - RCAV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_submitted__c</fullName>
        <label>Date of Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <label>Date of Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_received_by_Government__c</fullName>
        <label>Date of Receipt - Government</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Requirement__c</fullName>
        <label>Description of Requirement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IMM0008 - Generic Application</fullName>
                </value>
                <value>
                    <fullName>IMM0008 Schedule 2</fullName>
                </value>
                <value>
                    <fullName>Schedule A</fullName>
                </value>
                <value>
                    <fullName>Representtaive Form</fullName>
                </value>
                <value>
                    <fullName>Photos</fullName>
                </value>
                <value>
                    <fullName>Refugee Story</fullName>
                </value>
                <value>
                    <fullName>Documents (various)- UNHCR, RDS, Passports, Birth cert, Marriage, etc.</fullName>
                </value>
                <value>
                    <fullName>IMM5373 - Undertaking to sponsor</fullName>
                </value>
                <value>
                    <fullName>Sponsor Assessment</fullName>
                </value>
                <value>
                    <fullName>In Trust Bank Account</fullName>
                </value>
                <value>
                    <fullName>Settlement plan</fullName>
                </value>
                <value>
                    <fullName>Budget/Support Calculation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Engagement__c</fullName>
        <label>Program Engagement</label>
        <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the requirement&apos;s completion</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Received</fullName>
                    <default>true</default>
                    <label>Not Yet Received</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Pending Signature(s)</fullName>
                </value>
                <value>
                    <fullName>Completed/Received</fullName>
                </value>
                <value>
                    <fullName>Lost/Dropped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sponsorship Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Req-{00000}</displayFormat>
        <label>Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsorship Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>